kubernetes/apps/myfpl-api/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfpl-api-ingress
spec:
  tls:
    - hosts:
        - api-dev.dilfpl.com
      secretName: dev-api-myfpl
  rules:
    - host: api-dev.dilfpl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
